# llm-playground

./: .gitignore  Cargo.toml  README.md  Trunk.toml  flake.nix  index.html  input.css
bundle/Contents/: Info.plist
common/: Cargo.toml
common/src/: lib.rs
leptos/: Cargo.toml  Trunk.toml  index.html
leptos/macros/: Cargo.toml
leptos/macros/src/: lib.rs
leptos/src/: chat.rs  commands.rs  common.rs  history.rs  main.rs  settings.rs  util.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: app.rs  chat.rs  common.rs  config.rs  fetch_tokens.rs  main.rs  settings.rs  util.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: fetch_tokens.rs  main.rs  util.rs
tauri/: Cargo.toml  tauri.conf.json
tauri/entity/src/: conversations.rs  exchanges.rs  lib.rs  prelude.rs
tauri/src/: fetch_tokens.rs  main.rs  util.rs
ui/: Cargo.toml
ui/macros/src/: lib.rs
ui/src/: chat.rs  commands.rs  history.rs  main.rs  settings.rs  util.rs
