[package]
name = "llm-playground-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.6", features = ["csr", "nightly"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
serde_json = "1.0.117"
web-sys = { version = "0.3.69", features = ["EventInit"] }
reqwest-eventsource = "0.6.0"
anyhow = "1.0.83"
futures = "0.3.30"
reqwest = "0.12.4"
eventsource-stream = "0.2.3"

[workspace]
members = ["src-tauri"]
