[package]
name = "llm-playground"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0.1"
anyhow = "1.0.83"
reqwest-eventsource = "0.6.0"
reqwest = "0.12.4"
futures = "0.3.30"
eventsource-stream = "0.2.3"
tokio = { version = "1.37.0", features = ["rt", "macros"] }
lazy_static = "1.4.0"
strum_macros = "0.26.2"
strum = "0.26.2"
common = { path = "../common" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
