[package]
name = "llm-playground"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0.1"
anyhow = "1.0.86"
reqwest = { version = "0.12.5", features= ["stream"] }
futures = "0.3.30"
eventsource-stream = "0.2.3"
tokio = { version = "1.39.2", features = ["rt", "macros"] }
lazy_static = "1.5.0"
strum_macros = "0.26.4"
strum = "0.26.3"
common = { path = "../common" }
notify = { version = "6.1.1", features = ["macos_kqueue"] }
serde-error = "0.1.2"
sea-orm = { version = "0.12.15", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
entity = { path = "./entity" }
migration = { path = "../migration" }
uuid = "1.10.0"
chrono = "0.4.38"
http = "1.1.0"
bytes = "1.7.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
