[package]
name = "llm-playground-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.6", features = ["csr", "nightly"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
serde_json = "1.0.117"
anyhow = "1.0.83"
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["rt", "macros", "sync", "time"] }
gloo-utils = { version = "0.2.0", features = ["serde"] }
strum_macros = "0.26.2"
strum = "0.26.2"
common = { path = "../common" }
macros = { path = "./macros" }
serde-error = "0.1.2"
uuid = "1.9.1"
chrono = "0.4.38"
lazy_static = "1.5.0"
